@@ -345,11 +345,13 @@ GEN     FlxqX_Flxq_mul_to_monic(GEN P, GEN U, GEN T, ulong p);
 GEN     FlxqX_divrem(GEN x, GEN y, GEN T, ulong p, GEN *pr);
 GEN     FlxqX_extgcd(GEN a, GEN b, GEN T, ulong p, GEN *ptu, GEN *ptv);
 GEN     FlxqX_gcd(GEN P, GEN Q, GEN T, ulong p);
+GEN     FlxqX_get_red(GEN S, GEN T, ulong p);
 GEN     FlxqX_invBarrett(GEN T, GEN Q, ulong p);
 GEN     FlxqX_mul(GEN x, GEN y, GEN T, ulong p);
 GEN     FlxqX_normalize(GEN z, GEN T, ulong p);
 GEN     FlxqX_pow(GEN V, long n, GEN T, ulong p);
 GEN     FlxqX_red(GEN z, GEN T, ulong p);
+GEN     FlxqX_rem(GEN x, GEN y, GEN T, ulong p);
 GEN     FlxqX_safegcd(GEN P, GEN Q, GEN T, ulong p);
 GEN     FlxqX_sqr(GEN x, GEN T, ulong p);
 GEN     FlxqXQ_div(GEN x, GEN y, GEN S, GEN T, ulong p);
@@ -378,6 +380,9 @@ GEN     gener_Flxq(GEN T, ulong p, GEN *o);
 long    get_Flx_degree(GEN T);
 GEN     get_Flx_mod(GEN T);
 long    get_Flx_var(GEN T);
+long    get_FlxqX_degree(GEN T);
+GEN     get_FlxqX_mod(GEN T);
+long    get_FlxqX_var(GEN T);
 const struct bb_field *get_Flxq_field(void **E, GEN T, ulong p);
 const struct bb_group *get_Flxq_star(void **E, GEN T, ulong p);
 GEN     monomial_Flx(ulong a, long d, long vs);
@@ -4456,7 +4461,6 @@ INLINE GEN    Flxq_sub(GEN x,GEN y,GEN T,ulong p);
 
 INLINE GEN    FpXQX_div(GEN x, GEN y, GEN T, GEN p);
 INLINE GEN    FlxqX_div(GEN x, GEN y, GEN T, ulong p);
-INLINE GEN    FlxqX_rem(GEN x, GEN y, GEN T, ulong p);
 
 INLINE GEN    Fq_red(GEN x, GEN T, GEN p);
 INLINE GEN    Fq_to_FpXQ(GEN x, GEN T, GEN p);
