@@ -368,6 +368,8 @@ BA132- [libpari] idealramfrobenius, idealfrobenius_aut, nfgaloispermtobasis
 PB138- [libpari] Flm_sub, FpM_sub
 BA138- [libpari] get_FpXQX_mod, get_FpXQX_degree, get_FpXQX_var,
        FpXQX_get_red, FqX_get_red, random_FpXQX
+BA139- [libpari] get_FlxqX_mod, get_FlxqX_degree, get_FlxqX_var,
+       FlxqX_get_red, random_FlxqX
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
@@ -495,3 +497,4 @@ BA 7- divide_conquer_prod: use gen_product instead
       as an analog to zetak(). Or directly lfun(x^2+1, s) if a single value
       is needed. [#368, #1647]
 BA10- [libpari] FpXQX_rem_Barrett, FpXQX_divrem_Barrett: use FpXQX_get_red
+BA11- [libpari] FlxqX_rem_Barrett: use FlxqX_get_red
